--- a/apps/fumadocs/content/docs/index.mdx
+++ b/apps/fumadocs/content/docs/index.mdx
@@ -4,4 +4,33 @@ description: AI-powered customer service for your WhatsApp business
 icon: MessageSquare
 ---
 
-Welcome to Echo documentation.
+Echo is an **AI-powered customer service platform** that automates WhatsApp conversations for small and medium businesses in Latin America. Connect your WhatsApp Business number, add your product catalog, and let Echo handle customer inquiries and orders 24/7.
+
+{/* Dashboard screenshot will be added in S16 */}
+
+<Cards>
+  <Card href="/docs/getting-started" title="Quick Start Guide">
+    Get up and running with Echo in about 30 minutes.
+  </Card>
+  <Card href="/docs/products" title="Products">
+    Manage your product catalog, categories, and availability.
+  </Card>
+  <Card href="/docs/orders" title="Orders">
+    Track and fulfill customer orders from start to delivery.
+  </Card>
+  <Card href="/docs/conversations" title="Conversations">
+    Monitor AI conversations and take over when needed.
+  </Card>
+  <Card href="/docs/customers" title="Customers">
+    View customer profiles, order history, and preferences.
+  </Card>
+  <Card href="/docs/integrations" title="Integrations">
+    Connect WhatsApp, Shopify, and other services.
+  </Card>
+  <Card href="/docs/settings" title="Settings">
+    Configure your business, AI behavior, and more.
+  </Card>
+  <Card href="/docs/faq" title="FAQ">
+    Answers to frequently asked questions.
+  </Card>
+</Cards>
