feat: [S03] - Create Quick Start Guide

--- a/apps/fumadocs/content/docs/getting-started/index.mdx
+++ b/apps/fumadocs/content/docs/getting-started/index.mdx
@@ -1,7 +1,88 @@
 ---
 title: Quick Start Guide
-description: Get up and running with Echo in 30 minutes
+description: Get up and running with Echo in about 30 minutes
 icon: Rocket
 ---
 
-Quick Start Guide placeholder.
+Follow these steps to set up Echo and start automating your WhatsApp customer service. The entire process takes approximately **30 minutes**.
+
+<div className="fd-steps [&_h3]:fd-step">
+
+### Create your account
+
+Sign up for Echo using your email address or Google account. You'll receive a confirmation email to verify your account.
+
+[Sign up for Echo →](/signup)
+
+### Set up your business profile
+
+Complete the onboarding wizard to configure your business:
+
+1. **Business Info** — Enter your business name, type (restaurant, pharmacy, retail, or other), and description
+2. **Branding** — Add your logo and business address
+3. **Review** — Confirm your settings and create your business
+
+Your business profile helps the AI understand your business and respond appropriately to customers.
+
+[Learn more about business setup →](/docs/getting-started/business-setup)
+
+### Add your products
+
+Build your product catalog so the AI can answer questions about pricing, availability, and help customers place orders.
+
+- Add products individually with name, description, price, and image
+- Organize products into categories
+- Set availability status for each product
+- Or import products from Shopify if you have an existing store
+
+[Learn more about products →](/docs/products)
+
+### Connect WhatsApp
+
+Link your WhatsApp Business number to Echo using Twilio:
+
+1. Create a Twilio account and set up WhatsApp Sandbox (or production number)
+2. Enter your Twilio credentials in Echo settings
+3. Configure the webhook URL to receive messages
+4. Test the connection by sending a message
+
+[Learn more about WhatsApp integration →](/docs/integrations/whatsapp)
+
+### Configure your AI assistant
+
+Customize how the AI interacts with your customers:
+
+- **Greeting message** — The first message customers receive
+- **Personality instructions** — Define the tone and style of responses
+- **Escalation keywords** — Words that trigger human handover
+
+[Learn more about AI configuration →](/docs/settings/ai-configuration)
+
+### Test your setup
+
+Before going live, send a few test messages to your WhatsApp number:
+
+1. Ask about a product from your catalog
+2. Try placing a test order
+3. Use an escalation keyword to verify handover works
+4. Check the Conversations dashboard to see the interaction
+
+### Go live!
+
+Once testing is complete, you're ready to share your WhatsApp number with customers. The AI will handle incoming messages 24/7, and you can monitor conversations from the dashboard.
+
+</div>
+
+## What's next?
+
+<Cards>
+  <Card href="/docs/products" title="Manage Products">
+    Add, edit, and organize your product catalog.
+  </Card>
+  <Card href="/docs/conversations" title="Monitor Conversations">
+    View AI conversations and take over when needed.
+  </Card>
+  <Card href="/docs/orders" title="Handle Orders">
+    Track and fulfill customer orders.
+  </Card>
+</Cards>
