feat: [S04] - Create Business Setup documentation

--- a/apps/fumadocs/content/docs/getting-started/business-setup.mdx
+++ b/apps/fumadocs/content/docs/getting-started/business-setup.mdx
@@ -4,4 +4,84 @@ description: Create and configure your business profile
 icon: Building2
 ---
 
-Business Setup placeholder.
+When you first sign in to Echo, you'll be guided through a 3-step onboarding wizard to set up your business profile. This information helps the AI understand your business and respond appropriately to customers.
+
+## The Onboarding Wizard
+
+<div className="fd-steps [&_h3]:fd-step">
+
+### Step 1: Business Information
+
+Enter the core details about your business:
+
+| Field | Required | Description |
+|-------|----------|-------------|
+| **Business Name** | Yes | Your business name (minimum 2 characters). This is shown to customers and used by the AI. |
+| **Business Type** | Yes | Select the category that best describes your business. |
+| **Description** | No | A brief description of your business. Helps the AI understand what you sell or do. |
+
+### Step 2: Branding
+
+Customize your business appearance:
+
+| Field | Required | Description |
+|-------|----------|-------------|
+| **Business Logo** | No | A URL to your logo image. Displayed in the dashboard and can be shown to customers. |
+| **Business Address** | No | Your physical address. Shown to customers for pickup orders. |
+
+To add a logo, enter the URL of an image hosted online (e.g., `https://example.com/logo.png`). The image will be previewed as you type.
+
+### Step 3: Review & Create
+
+Review all your information before creating your business:
+
+- Your logo and name are displayed
+- Business type is shown
+- Description and address are listed (if provided)
+
+You have two options:
+- **Create Business & Go to Dashboard** — Start using Echo immediately
+- **Create & Connect WhatsApp** — Create and go directly to WhatsApp integration settings
+
+</div>
+
+## Business Types
+
+Echo supports four business types, each optimized for different use cases:
+
+| Type | Best For | AI Behavior |
+|------|----------|-------------|
+| **Restaurant** | Cafes, restaurants, food delivery | Understands menu items, dietary restrictions, delivery times |
+| **Pharmacy** | Pharmacies, drugstores | Careful with medical queries, emphasizes consulting professionals |
+| **Retail** | Shops, stores, e-commerce | Product availability, sizing, shipping questions |
+| **Other** | Any other business | General-purpose customer service responses |
+
+The AI uses your business type to tailor its responses. For example, a restaurant AI will naturally handle questions about ingredients and allergens, while a retail AI focuses on product details and stock.
+
+## Editing Your Business Later
+
+After creating your business, you can update all settings from **Settings > General > Business Info**:
+
+- Change your business name
+- Update the description
+- Modify your logo URL
+- Edit your address
+
+[Learn more about settings →](/docs/settings)
+
+## Multiple Businesses
+
+Echo supports multiple businesses per account. To add another business:
+
+1. Click your business name in the sidebar
+2. Select **Add Business**
+3. Complete the onboarding wizard again
+
+Each business has its own:
+- Product catalog
+- WhatsApp connection
+- Customer conversations
+- Order history
+- AI configuration
+
+Switch between businesses using the business selector in the sidebar.
