feat: [S06] - Create Categories documentation

--- a/apps/fumadocs/content/docs/products/categories.mdx
+++ b/apps/fumadocs/content/docs/products/categories.mdx
@@ -4,4 +4,81 @@ description: Organize products with categories
 icon: FolderTree
 ---
 
-Categories placeholder.
+Categories help you organize your products into logical groups. Customers can browse by category, and the AI uses categories to suggest related items.
+
+## Why Use Categories?
+
+- **Organization** — Group related products together (e.g., "Appetizers", "Main Dishes", "Desserts")
+- **AI Context** — The AI understands product groupings and can suggest alternatives from the same category
+- **Filtering** — Quickly find products using the category filter on the Products page
+- **Bulk Actions** — Move multiple products to a category at once
+
+## Managing Categories
+
+Navigate to **Products → Manage Categories** to open the category manager.
+
+### Creating a Category
+
+1. Enter the category name in the text field
+2. Click **Create Category**
+
+The category is immediately available for assigning products.
+
+### Editing a Category
+
+1. Click the pencil icon next to the category name
+2. Update the name
+3. Click **Save** (or Cancel to discard changes)
+
+Renaming a category does not affect the products assigned to it.
+
+### Deleting a Category
+
+1. Click the trash icon next to the category
+2. Confirm the deletion
+
+**Important:** When you delete a category, products in that category become **uncategorized**. The products themselves are not deleted.
+
+## Uncategorized Products
+
+Products without a category are grouped under "Uncategorized" in the category manager. The count shows how many products have no category assigned.
+
+To assign uncategorized products to a category:
+
+1. Go to **Products**
+2. Filter by **Uncategorized**
+3. Select the products you want to move
+4. Use the **Move to...** dropdown in the bulk action toolbar
+
+## Moving Products Between Categories
+
+You can change a product's category in two ways:
+
+### Single Product
+1. Click on the product to open its detail page
+2. Select a new category from the dropdown
+3. Save changes
+
+### Multiple Products (Bulk)
+1. Go to **Products**
+2. Select the products you want to move
+3. Click **Move to...** in the bulk action toolbar
+4. Select the destination category
+
+Products are moved immediately.
+
+## Category Best Practices
+
+### Use Clear Names
+Choose names your customers would use. "Pizza" is clearer than "Italian Entrees - Flatbread".
+
+### Keep It Simple
+Start with 3-5 main categories. You can always add more later.
+
+### Match Your Business
+- **Restaurant:** Appetizers, Main Dishes, Desserts, Drinks
+- **Pharmacy:** Medications, Personal Care, Vitamins, First Aid
+- **Retail:** Men's, Women's, Kids, Accessories
+
+### Avoid Empty Categories
+If a category has no products, consider removing it to keep the list clean.
