feat: [S10, S11, S12] - Create Integrations documentation (overview, WhatsApp, Shopify)

--- a/apps/fumadocs/content/docs/integrations/index.mdx
+++ b/apps/fumadocs/content/docs/integrations/index.mdx
@@ -4,4 +4,49 @@ description: Connect Echo with other services
 icon: Plug
 ---
 
-Integrations placeholder.
+Echo integrates with essential services to power your customer service automation. Connect WhatsApp to receive messages and Shopify to sync your product catalog.
+
+## Available Integrations
+
+<Cards>
+  <Card href="/docs/integrations/whatsapp" title="WhatsApp">
+    Connect your WhatsApp Business number via Twilio to receive and send customer messages.
+  </Card>
+  <Card href="/docs/integrations/shopify" title="Shopify">
+    Import products from your Shopify store and sync orders.
+  </Card>
+</Cards>
+
+## Integration Status
+
+You can check the status of all integrations in **Settings > Integrations**. Each integration shows:
+
+- **Connected/Disconnected** status
+- Last sync time (where applicable)
+- Quick actions (Configure, Disconnect)
+
+## Required Integration
+
+### WhatsApp
+
+WhatsApp is **required** for Echo to function. Without it, you can't receive customer messages.
+
+[Set up WhatsApp →](/docs/integrations/whatsapp)
+
+## Optional Integrations
+
+### Shopify
+
+If you already have a Shopify store, you can import your products instead of adding them manually. This saves time and keeps your catalog in sync.
+
+[Set up Shopify →](/docs/integrations/shopify)
+
+## Future Integrations
+
+We're working on additional integrations:
+
+- **Stripe** — Direct payment processing
+- **WooCommerce** — Product catalog sync
+- **Square** — POS integration
+
+Contact us if you need a specific integration for your business.
