--- a/apps/fumadocs/content/docs/integrations/whatsapp.mdx
+++ b/apps/fumadocs/content/docs/integrations/whatsapp.mdx
@@ -4,4 +4,136 @@ description: Connect your WhatsApp Business number
 icon: MessageSquare
 ---
 
-WhatsApp integration placeholder.
+Connect your WhatsApp Business number to Echo using Twilio. This allows customers to message your business and receive AI-powered responses.
+
+## Prerequisites
+
+Before setting up, you'll need:
+
+1. A [Twilio account](https://www.twilio.com/try-twilio) (free trial available)
+2. A WhatsApp-enabled Twilio phone number or [WhatsApp Sandbox](https://www.twilio.com/docs/whatsapp/sandbox)
+3. Your Twilio Account SID and Auth Token
+
+## Setup Steps
+
+<div className="fd-steps [&_h3]:fd-step">
+
+### Create a Twilio Account
+
+1. Go to [Twilio's website](https://www.twilio.com/try-twilio)
+2. Sign up for a free account
+3. Verify your email and phone number
+
+### Set Up WhatsApp Sandbox (Development)
+
+For testing, use Twilio's WhatsApp Sandbox:
+
+1. In Twilio Console, go to **Messaging > Try it out > Send a WhatsApp message**
+2. Follow the instructions to join your sandbox
+3. Note your sandbox phone number
+
+For production, you'll need to [apply for a WhatsApp Business number](https://www.twilio.com/docs/whatsapp/api#requesting-access-for-your-own-number).
+
+### Get Your Twilio Credentials
+
+1. Go to your [Twilio Console Dashboard](https://console.twilio.com/)
+2. Find your **Account SID** and **Auth Token**
+3. Copy these values — you'll need them in the next step
+
+### Configure Echo
+
+1. In Echo, go to **Settings > Integrations > WhatsApp**
+2. Enter your credentials:
+
+| Field | Description |
+|-------|-------------|
+| **Account SID** | Your Twilio Account SID (starts with "AC") |
+| **Auth Token** | Your Twilio Auth Token |
+| **Phone Number** | Your WhatsApp number in E.164 format (e.g., +14155551234) |
+
+3. Click **Save Credentials**
+
+### Configure the Webhook URL
+
+This is the most important step. Twilio needs to know where to send incoming messages.
+
+1. In Echo's WhatsApp settings, find the **Webhook URL**
+2. Copy the URL (looks like `https://your-deployment.convex.site/webhook/whatsapp`)
+3. In Twilio Console:
+   - For Sandbox: Go to **Messaging > Settings > WhatsApp Sandbox settings**
+   - For Production: Go to your WhatsApp Sender configuration
+4. Paste the webhook URL in the **"When a message comes in"** field
+5. Make sure the method is set to **POST**
+6. Save your changes
+
+{/* Screenshot: whatsapp-webhook.png showing webhook URL section */}
+
+### Test the Connection
+
+1. Click **Test Connection** in Echo
+2. If successful, you'll see a green checkmark
+3. Send a test message from your phone to your WhatsApp number
+4. Check the Conversations dashboard — you should see the message
+
+</div>
+
+## Connection Status
+
+The WhatsApp settings page shows your current connection status:
+
+| Status | Meaning |
+|--------|---------|
+| **Connected & Verified** | Everything is working correctly |
+| **Connected** | Credentials saved but not verified |
+| **Not Connected** | No credentials configured |
+
+**Last Webhook** shows when Echo last received a message from Twilio, confirming the webhook is working.
+
+## Troubleshooting
+
+### Messages Not Arriving
+
+1. **Check webhook URL** — Make sure it's correctly configured in Twilio
+2. **Verify the URL is accessible** — Test by visiting the URL in your browser (should show an error, not a 404)
+3. **Check Twilio logs** — Go to Twilio Console > Monitor > Logs > Webhooks for error details
+
+### "Account SID or Auth Token invalid"
+
+1. Double-check your credentials in Twilio Console
+2. Make sure you're using the Account SID, not the API Key SID
+3. Auth Token changes if you reset it — copy the new one
+
+### Messages Delayed
+
+WhatsApp has [rate limits](https://www.twilio.com/docs/whatsapp/rate-limits). If you're sending many messages:
+- Messages may be queued
+- Consider upgrading your Twilio plan
+
+### Sandbox Expired
+
+Twilio Sandbox connections expire after 72 hours of inactivity. To reconnect:
+1. Send the join message again from your phone
+2. Continue testing
+
+For production use, get a WhatsApp Business number.
+
+## Production Setup
+
+For a production WhatsApp Business account:
+
+1. [Apply for WhatsApp Business API access](https://www.twilio.com/docs/whatsapp/api#requesting-access-for-your-own-number)
+2. Verify your business with Facebook/Meta
+3. Wait for approval (typically 1-2 weeks)
+4. Configure your production number in Twilio
+5. Update Echo with your production phone number
+
+## Best Practices
+
+### Use a Dedicated Number
+Don't use a personal WhatsApp number. Get a business line for professional communication.
+
+### Set Up During Business Hours
+Do initial testing when you can respond to test messages quickly.
+
+### Monitor Regularly
+Check the connection status periodically to ensure messages are flowing.
